Sistema estable por el momento...