@@ -1,5 +1,6 @@
 package sur.softsurena.utilidades.digitalPersonal.consule;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -11,16 +12,18 @@ public class SampleApp {
     private final static String DEFAULT_UI_FACTORY = "sur.softsurena.utilidades.digitalPersonal.consule.ConsoleUserInterfaceFactory";
     private final static String DEFAULT_DB_FACTORY = "sur.softsurena.utilidades.digitalPersonal.consule.SessionUserDatabaseFactory";
 
-    public static void main (String[] args) {
+    public static void main (String[] args) 
+            throws NoSuchMethodException, IllegalArgumentException, InvocationTargetException {
 
         try (var cache = Executors.newCachedThreadPool();){
             UserDatabase.Factory dbFactory =  
-                    (UserDatabase.Factory) Class.forName(DEFAULT_DB_FACTORY).newInstance();
-            
+                    (UserDatabase.Factory) Class.forName(DEFAULT_DB_FACTORY).getDeclaredConstructor().newInstance();
+ 
+
             UserDatabase userDatabase = dbFactory.createDB();
 
             UserInterface.Factory uiFactory = 
-                    (UserInterface.Factory) Class.forName(DEFAULT_UI_FACTORY).newInstance();
+                    (UserInterface.Factory) Class.forName(DEFAULT_UI_FACTORY).getDeclaredConstructor().newInstance();
             
             UserInterface userInterface = uiFactory.createUI(userDatabase);
 
